@@ -291,6 +291,7 @@ for my $filename (@ARGV) {
                             die "ERROR, could not open file for appending -- "
                               . lcfirst($!) . "\n";
                     }
+                    binmode $output_handle, ':encoding(UTF-8)';
                     print $output_handle $cif_contents;
                     close $output_handle;
                 };
